Changed Observation, ObservationWithResult, and Person to be interfaces, instead of public abstract classes.